getting all time intervals of room
